# Bleu.js

./: .04f64bbbc4916245f2da6b94e9e04632efa9d71a-audit.json  .bandit  .cache_ggshield  .coverage  .dockerignore  .editorconfig  .env  .env.example  .eslintcache  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .eslintrc.ts  .flake8  .gitattributes  .gitignore  .intelligent_config.py  .npmignore  .pnpmfile.cjs  .pre-commit-config.yaml  .prettierignore  .simple-git-hooks.json  .tsbuildinfo  =0.12.20  =0.18.3  =0.20.0  =0.21.2  =0.40.0  =1.2.2  =2.10.1  =2023.7.22  =24.2.0  =3.19.1  =3.4.0  =3.5.1  =3.7  =4.43.0  =4.9.1  =42.0.5  =44.0.1  (+270 more)
.ebextensions/: 01_environment.config  02_environment_settings.config  02_production.config  03_iam_roles.config  04_instance_configuration.config  05_monitoring_updates.config  06_networking.config  07_security_enhancements.config  08_autoscaling.config  09_backup_recovery.config
.elasticbeanstalk/: config.yml
.github/: AUTOMATIC_DOCKER_PUSH.md  CODEOWNERS  DOCKERHUB_SETUP.md  DOCKER_HUB_ORG_TOKENS.md  DOCKER_HUB_PRIMARY.md  DOCKER_HUB_SETUP_COMPLETE.md  DOCKER_ORG_FORM_HELP.md  DOCKER_ORG_NAMING_OPTIONS.md  DOCKER_PULL_COMMANDS.md  DOCKER_SCOUT_VULNERABILITIES.md  FINAL_SETUP_STEPS.md  FINAL_TEST_RESULTS.md  FIX_DOCKER_HUB_SECRETS.md  FIX_TWEET_COMMAND.md  GHCR_ACCESS_OPTIONS.md  GHCR_VS_DOCKERHUB.md  HOW_TO_CHECK_WORKFLOW_LOGS.md  ISSUE_LABELING_GUIDE.md  MAKE_IMAGES_PUBLIC.md  PYTORCH_VULNERABILITIES.md  REPOSITORY_DESCRIPTION.md  SECRETS_FIXED_NEXT_STEPS.md  SECURITY_VULNERABILITIES.md  SHORT_DESCRIPTION.md  SUCCESS_DOCKER_READY.md  TEST_RESULTS.md  TROUBLESHOOT_DOCKER_PUSH.md  USER_ACCESSIBILITY_STATUS.md  USER_ACCESSIBILITY_TEST.md  USER_READINESS_CHECKLIST.md  WAITING_FOR_BUILD.md  auto-assign.yml  codeql-config.yml  dependabot.yml  pull_request_template.md  welcome-first-pr.md
.husky/: pre-commit  pre-push  prepare-commit-msg
.jest-cache/: haste-map-47667e809ceca415872ad29ed53e8e8b-a2a1339edf43e820940993b64347c2d7-a78cc20d0c809ac301f0670204c46abe  haste-map-915e2f9994cf220af9fc3a1b297a62e4-a2a1339edf43e820940993b64347c2d7-79ac02c58a6e5b50e5591113ec0ca398  perf-cache-47667e809ceca415872ad29ed53e8e8b-da39a3ee5e6b4b0d3255bfef95601890
.nyc_output/: 85f9edbf-09bb-457e-9e2c-04e549e0d772.json
backend/: .04f64bbbc4916245f2da6b94e9e04632efa9d71a-audit.json  .eslintrc.cjs  .eslintrc.json.bak  Dockerfile  Dockerfile.backend  db.js  docker-compose.yml  ecosystem.config.cjs  ecosystem.config.js  eslint.config.js  globalSetup.js  globalTeardown.js  index.js  index.mjs  inference.py  jest.backend.config.cjs  jest.backend.config.js  jest.backend.config.mjs  jest.setup.js  package-lock 2.json  package-lock.json  package.json  predict_api.py  requirements.txt  scaler.pkl  server.js  swagger.js  testSequencer.js  test_xgboost.py  train_xgboost.py  tsbuildinfo.json  tsconfig.json  xgboost_model.pkl  xgboost_predict.py
bleu-os/: .railwayignore  .trivyignore  ALL_DONE.md  ALPINE_UPDATE.md  ANNOUNCEMENT.md  BUILD_EXECUTED.md  BUILD_FINAL_ATTEMPT.md  BUILD_FIXED.md  BUILD_REPORT.md  BUILD_SUMMARY.md  BUILD_TIME_NOTES.md  BUILD_WITH_ATTESTATIONS.md  COMMANDS_EXECUTED_SUMMARY.md  COMPLETION_STATUS.md  DEPENDABOT_DOCKER_BUILDS.md  DISTRIBUTION_GUIDE.md  DISTRIBUTION_STRATEGY.md  DISTRIBUTION_VERIFICATION.md  DOCKER_ANALYSIS.md  DOCKER_COMPLETE.md  DOCKER_FIXED.md  DOCKER_IMPROVEMENTS.md  DOCKER_INSTALLED.md  DOCKER_SCOUT_DETECTION_FIX.md  (+52 more)
core-engine/src/rust/: Cargo.toml  manager.mjs  manager.ts
core-engine/src/rust/templates/: optimizer.rs
python/: pyproject.toml  requirements.txt
python/bleu_ai/: __init__.py
python/bleu_ai/ai/: ensembleManager.py  explainabilityEngine.py  featureAnalyzer.py  uncertaintyHandler.py
python/bleu_ai/benchmarks/: benchmark_suite.py
python/bleu_ai/compression/: model_compressor.py
python/bleu_ai/distributed/: distributed_manager.py  training_manager.py
python/bleu_ai/docs/: award_submission.md  patent_application.md  research_paper.md
python/bleu_ai/features/: feature_analyzer.py
python/bleu_ai/models/: __init__.py  ensemble_model.py  model_factory.py  xgboost_model.py
python/bleu_ai/monitoring/: performance_tracker.py
python/bleu_ai/optimization/: adaptive_learning.py  quantum_optimizer.py
python/bleu_ai/quantum/: quantumProcessor.py  quantum_processor.py
python/bleu_ai/security/: encryption_manager.py
python/bleu_ai/visualization/: advanced_plots.py
src/quantum_py/: .coverage  .coveragerc  .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
src/quantum_py/.github/workflows/: ci.yml
src/quantum_py/.pytest_cache/v/cache/: lastfailed
src/quantum_py/bleu_quantum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/quantum_py/bleujs-env-3.12/: pyvenv.cfg
src/quantum_py/core/: quantum_algorithms.py  quantum_circuit.py  quantum_gate.py  quantum_processor.py  quantum_state.py
src/quantum_py/enhancers/: quantum_enhancer.py
src/quantum_py/examples/: __init__.py  hybrid_xgboost_example.py  quantum_detection_example.py  quantum_xgboost_example.py
src/quantum_py/intelligence/: market_intelligence.py  quantum_intelligence.py  strategic_intelligence.py
src/quantum_py/ml/: __init__.py  enhanced_xgboost.py  train_xgboost.py
src/quantum_py/optimization/: contest_strategy.py
src/quantum_py/quantum/: __init__.py  attention.py  circuit.py  processor.py  quantum_processor.py  self_learning.py  types.py
src/quantum_py/quantum/__tests__/: test_quantum_intelligence.py
src/quantum_py/quantum/attention/: quantum_attention.py
src/quantum_py/quantum/feature_processing/: quantum_feature_processor.py
src/quantum_py/quantum/hybrid/: __init__.py  test_xgboost_quantum_hybrid.py  xgboost_quantum_hybrid.py
src/quantum_py/quantum/intelligence/: quantum_intelligence.py
src/quantum_py/tests/: test_quantum.py
src/quantum_py/types/: quantum_types.py
src/quantum_py/utils/: quantum_utils.py
src/quantum_py/vision/: quantum_detector.py
src/quantum_py/wasm/: quantum_ops.rs  quantum_wasm.py
(+1893 files in other folders)
