[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Push to main (non-docs) triggers auto-release then Release Management.

[tool.poetry]
name = "bleu-js"
version = "1.4.48"
description = "Advanced AI and Quantum Computing Framework"
authors = ["Bleujs Team <support@helloblue.ai>"]
readme = "README.md"
license = "MIT"
packages = [{include = "bleujs", from = "src"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Quantum Computing",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
# ---------------------------------------------------------------------------
# Minimal default: API + CLI only (fast install, no torch/shap/numba).
# Add [ml], [quantum], [deep], [server], or [all] for more.
# ---------------------------------------------------------------------------
numpy = "^2.2.6"
click = "^8.2.1"
httpx = "^0.28.1"
pydantic = {extras = ["email"], version = "^2.7.0"}
urllib3 = ">=2.6.3"  # CVE-2026-21441
setuptools = ">=78.1.1,<83.0.0"
# Optional: HTTP and env (for server/scripts; SDK uses httpx only)
requests = {version = "^2.32.4", optional = true}
python-dotenv = {version = ">=0.21,<1.3", optional = true}

# Optional: ML (pandas, scikit-learn, xgboost)
pandas = {version = ">=2,<4", optional = true}
scikit-learn = {version = "^1.2.2", optional = true}
xgboost = {version = "^3.0.2", optional = true}

# Optional: Quantum (qiskit, pennylane)
pennylane = {version = ">=0.42.1,<0.45.0", optional = true}
qiskit = {version = "^2.1.1", optional = true}
qiskit-algorithms = {version = ">=0.3,<0.5", optional = true}
qiskit-aer = {version = "^0.17.1", optional = true}

# Optional: Deep learning (torch, tensorflow)
torch = {version = "^2.8.0", optional = true}
tensorflow = {version = "^2.19.0", optional = true}
keras = {version = ">=3.13.2", optional = true}
shap = {version = ">=0.48,<0.52", optional = true}

# Optional: Server (FastAPI app – for self-hosting or running src/main.py)
fastapi = {version = ">=0.116.1,<0.136.0", optional = true}
uvicorn = {version = "0.42.0", optional = true}
starlette = {version = ">=0.49.1", optional = true}
pydantic-settings = {version = "^2.10.1", optional = true}
jinja2 = {version = "^3.1.6", optional = true}
sqlalchemy = {version = "2.0.48", optional = true}
alembic = {version = "1.18.4", optional = true}
psycopg2-binary = {version = "2.9.11", optional = true}
boto3 = {version = "^1.24.0", optional = true}
aiohttp = {version = "^3.13.3", optional = true}
aiofiles = {version = ">=24.1,<26.0", optional = true}
h11 = {version = "0.16.0", optional = true}
pyjwt = {version = "^2.10.1", optional = true}
passlib = {version = "^1.7.4", optional = true}
redis = {version = ">=6.2,<8.0", optional = true}
python-multipart = {version = ">=0.0.22,<0.0.23", optional = true}
prometheus-client = {version = ">=0.23.1,<0.25.0", optional = true}
cryptography = {version = ">=46.0.5,<47.0.0", optional = true}
sparse = {version = ">=0.17,<0.19", optional = true}
psutil = {version = "^7.0.0", optional = true}
filelock = {version = ">=3.20.3", optional = true}
werkzeug = {version = ">=3.1.6", optional = true}
pyasn1 = {version = ">=0.6.2", optional = true}
pillow = {version = ">=12.1.1", optional = true}
wheel = {version = ">=0.46.3,<1.0", optional = true}
optuna = {version = "^4.4.0", optional = true}
opentelemetry-api = {version = "^1.35.0", optional = true}
opentelemetry-sdk = {version = "^1.35.0", optional = true}
ray = {version = ">=2.9.0", optional = true}

gputil = {version = "^1.4.0", optional = true}

[tool.poetry.extras]
# [api] = same as default (backward compat; no extra deps)
api = []
# ML stack
ml = ["pandas", "scikit-learn", "xgboost"]
# Quantum stack
quantum = ["qiskit", "qiskit-aer", "qiskit-algorithms", "pennylane"]
# Deep learning
deep = ["torch", "tensorflow", "keras", "shap"]
# Run the FastAPI app (self-host / dev)
server = [
    "requests",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "starlette",
    "pydantic-settings",
    "jinja2",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "boto3",
    "aiohttp",
    "aiofiles",
    "h11",
    "pyjwt",
    "passlib",
    "redis",
    "python-multipart",
    "prometheus-client",
    "cryptography",
    "sparse",
    "psutil",
    "filelock",
    "werkzeug",
    "pyasn1",
    "pillow",
    "wheel",
    "optuna",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "ray",
]
gpu = ["gputil"]
# Full stack (ML + quantum + deep + server + gpu)
all = [
    "requests",
    "python-dotenv",
    "pandas",
    "scikit-learn",
    "xgboost",
    "qiskit",
    "qiskit-aer",
    "qiskit-algorithms",
    "pennylane",
    "torch",
    "tensorflow",
    "keras",
    "shap",
    "gputil",
    "fastapi",
    "uvicorn",
    "starlette",
    "pydantic-settings",
    "jinja2",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "boto3",
    "aiohttp",
    "aiofiles",
    "h11",
    "pyjwt",
    "passlib",
    "redis",
    "python-multipart",
    "prometheus-client",
    "cryptography",
    "sparse",
    "psutil",
    "filelock",
    "werkzeug",
    "pyasn1",
    "pillow",
    "wheel",
    "optuna",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "ray",
]
# CI/Security job: same as "all" but without gputil (avoids venv querying repo "python/" dir → permission denied)
ci = [
    "requests",
    "python-dotenv",
    "pandas",
    "scikit-learn",
    "xgboost",
    "qiskit",
    "qiskit-aer",
    "qiskit-algorithms",
    "pennylane",
    "torch",
    "tensorflow",
    "keras",
    "shap",
    "fastapi",
    "uvicorn",
    "starlette",
    "pydantic-settings",
    "jinja2",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "boto3",
    "aiohttp",
    "aiofiles",
    "h11",
    "pyjwt",
    "passlib",
    "redis",
    "python-multipart",
    "prometheus-client",
    "cryptography",
    "sparse",
    "psutil",
    "filelock",
    "werkzeug",
    "pyasn1",
    "pillow",
    "wheel",
    "optuna",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "ray",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = ">=4,<8"
pytest-asyncio = ">=0.21,<1.4"
black = ">=25.1,<27.0"
isort = ">=5,<9"
flake8 = "^4.0.0"
mypy = ">=0.900,<1.20"
pre-commit = ">=2,<5"
ruff = ">=0.14.8,<0.16.0"
bandit = "^1.7.0"
types-pyyaml = "^6.0.12.20250516"
types-aiofiles = "^25.1.0.20251011"
virtualenv = ">=20.36.1"

[tool.poetry.scripts]
# Use package-relative path (bleujs.cli:main) so the installed script works after pip install.
# Do not use "cli:main" — that breaks with ModuleNotFoundError when the package is installed.
bleu = "bleujs.cli:main"
bleu-js = "bleujs.cli:main"
bleujs = "bleujs.cli:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Pytest: pytest.ini at repo root is canonical (pytest uses it when both exist).
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: Integration tests (external services or slow). Excluded from default CI via --ignore.",
    "asyncio: Async tests (pytest-asyncio).",
]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
]
ignore = [
    "E501", "B008", "C901",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
