[package]
name = "bleu-optimizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rayon = "1.7"
parking_lot = "0.12"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
bytes = "1.4"
encoding_rs = "0.8"
regex = "1.9"
lazy_static = "1.4"
memchr = "2.5"
aho-corasick = "1.0"
unicode-segmentation = "1.10"
unicode-width = "0.1"
unicode-normalization = "0.1"
unicode-xid = "0.2"
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
unicode-script = "0.5"
unicode-general-category = "0.6"
unicode-ident = "1.0"
unicode-segmentation = "1.10"
unicode-width = "0.1"
unicode-normalization = "0.1"
unicode-xid = "0.2"
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
unicode-script = "0.5"
unicode-general-category = "0.6"
unicode-ident = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rayon = "1.7"
parking_lot = "0.12"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
bytes = "1.4"
encoding_rs = "0.8"
regex = "1.9"
lazy_static = "1.4"
memchr = "2.5"
aho-corasick = "1.0"
unicode-segmentation = "1.10"
unicode-width = "0.1"
unicode-normalization = "0.1"
unicode-xid = "0.2"
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
unicode-script = "0.5"
unicode-general-category = "0.6"
unicode-ident = "1.0"
unicode-segmentation = "1.10"
unicode-width = "0.1"
unicode-normalization = "0.1"
unicode-xid = "0.2"
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
unicode-script = "0.5"
unicode-general-category = "0.6"
unicode-ident = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true 